chore: stream 제거하고 새로 ArrayList 생성하도록 변경